src/test/deca/codegen/valid/improvided/div_flotante.deca
// Description :
//      division entre deux flottant
// Resultats :
//  6.66667e-01 
{
    float x = 3.0;
    int t = 2;
    float z = t/x;
    println(z);
}

